# roguelike

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  codecov.yml
.github/workflows/: clang-format-check.yml  cmake-linux-clang.yml  cmake-linux-gcc.yml  cmake-linux.yml  cmake-macos.yml  cmake-windows.yml  cmake.yml  codecov.yml
core/include/: camera.h  glfw.h  gui.h  plugin.h  shader.h  transform.h  util.h
core/src/: CMakeLists.txt  camera.cpp  glfw.cpp  plugin.cpp  shader.cpp  transform.cpp
engine/: CMakeLists.txt
engine/include/: engine.h
engine/src/: CMakeLists.txt  engine.cpp
include/: camera.h  glfw.h  gui.h  imgui_config.h  sample.h  shader.h  transform.h  util.h
plugins/: CMakeLists.txt
plugins/src/: my_plugin.cpp
src/: CMakeLists.txt  camera.cpp  glfw.cpp  gui.cpp  main.cpp  sample.cpp  shader.cpp  test.cpp  transform.cpp
test/: CMakeLists.txt  glfw.cpp  plugin.cpp  shader.cpp  test_camera.cpp  test_glfw.cpp  test_plugin.cpp  test_shader.cpp  test_transform.cpp  transform.cpp
test/plugins/: CMakeLists.txt  plugin.cpp  plugin_patch.cpp
